Update border displaying for Safe Zones again