@@ -5,7 +5,6 @@ import io.papermc.paper.command.brigadier.CommandSourceStack;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public abstract class FunctionalCommand implements BasicCommand {
     private final Map<String, FunctionalCommand> ARGUMENTS = new HashMap<>();
@@ -25,17 +24,27 @@ public abstract class FunctionalCommand implements BasicCommand {
     }
 
     public @NotNull Collection<String> suggest(@NotNull CommandSourceStack commandSourceStack, @NotNull String[] args) {
+        if (args.length == 0) return Collections.emptyList();
+
+        if (args.length > 1) {
+            FunctionalCommand argument = ARGUMENTS.get(args[0]);
+            if (argument != null) {
+                return argument.suggest(commandSourceStack, Arrays.copyOfRange(args, 1, args.length));
+            }
+        }
+
         int index = args.length - 1;
+        final String toComplete = args[index];
 
         Collection<String> possible = COMPLETIONS.get(index);
         if (possible == null) return Collections.emptyList();
 
-        return possible.stream().filter(s -> s.startsWith(args[index])).collect(Collectors.toList());
+        return possible.stream().filter(s -> s.startsWith(toComplete) && !s.equals(toComplete)).toList();
     }
 
     protected void registerArgument(String argument, FunctionalCommand command, String... aliases) {
-        registerCompletions(0, List.of(argument));
-        registerCompletions(0, Arrays.asList(aliases));
+        registerCompletions(1, List.of(argument));
+        registerCompletions(1, Arrays.asList(aliases));
 
         ARGUMENTS.put(argument, command);
         for (String s : aliases) {
@@ -45,6 +54,8 @@ public abstract class FunctionalCommand implements BasicCommand {
     }
 
     protected void registerCompletions(int index, Collection<String> strings) {
+        if (index < 1) throw new IllegalArgumentException("Index must be at least 1 to register completion");
+        index = index - 1;
         Collection<String> completions = COMPLETIONS.computeIfAbsent(index, k -> new ArrayList<>());
         completions.addAll(strings);
     }
